# Pi-Zero-SKR-Pico-PUWinder

./: ARCHITECTURE.md  CHUNK_SIZE_FIX.md  CLEANUP_SUMMARY.md  CODEBASE_ERRORS_FOUND.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPREHENSIVE_ERROR_ANALYSIS.md  DEBUG_GUIDE.md  DELIVERY_SUMMARY.md  DEVELOPMENT.md  Doxyfile  EDGE_DETECTION_AND_M5_FIX.md  ENHANCED_FEATURES_IMPLEMENTATION.md  FINAL_FIX_SUMMARY.md  FIRST_SYNC_BUG_FIX.md  GITHUB_ACTIONS_FIXES.md  GITHUB_ACTIONS_TROUBLESHOOTING.md  GITHUB_CHEAT_SHEET.md  HARDWARE_ACCELERATION_ANALYSIS.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  ISR_PERFORMANCE_FIX.md  KLIPPER_ARCHITECTURE.md  KLIPPER_IMPROVEMENTS.md  KLIPPER_STYLE_ARCHITECTURE.md  MOTION_SYSTEM_EXPLAINED.md  NEXT_STEPS.md  PHASE1_ISR_OPTIMIZATION.md  PIO_PROGRESS_SNAPSHOT.md  PROPER_INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  WORKLOAD_DISTRIBUTION_ANALYSIS.md  check_tmc2209.py  copy_to_cm4_motion_planner.py  copy_to_cm4_test_planner.py  debug_pico.sh  direct_program.cfg  direct_stepper_test.py  gpio_test.py  hardware_check.py  (+14 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
Code-snippets/: README.md  config.h  cpp_snippets.cpp  gcode_examples.txt  gcode_g1_complete.cpp  gcode_interface_additions.cpp  main.c  main_cpp_additions.cpp  move_queue.cpp  move_queue.h  pi_zero_control.py  python_snippets.py  spindle.c  spindle.h  traverse.c  traverse.h
docs/: HALL_SENSOR_ANALYSIS.md  PI_ZERO_SETUP.md  QUICKSTART.md  README.md  WIRING.md  cpp_api.md  project_overview.md  python_api.md  setup_guide.md  troubleshooting_guide.md
files/: INTEGRATION_GUIDE.md  QUEUE_OVERFLOW_FIX_GUIDE.md  QUICK_START.md  main_complete.cpp  move_queue_FIXED.cpp  move_queue_FIXED.h  move_queue_complete.cpp  traverse_controller_additions.md  winding_controller_FIXED.cpp  winding_controller_complete.cpp
github-info/: AI_DOCS_SUMMARY.md  AI_DOCUMENTATION_GUIDE.md  GITHUB_ADVANCED_FEATURES.md  GITHUB_AUTOMATION_SETUP.md  GITHUB_ISSUES_GUIDE.md  SETUP_GUIDE.md
pi_cm4_setup/: DESKTOP_SETUP.md  IMAGE_SETUP.md  QUICK_START.md  README.md  setup.sh  setup_basic.sh  setup_cm4.sh  setup_minimal.sh  setup_simple.sh
pi_zero/: COMMAND_CONTROLLERS.md  COMPREHENSIVE_FUNCTION_LIST.md  README.md  (+37 more)
pico_firmware/: BUILD.md  CMakeLists.txt  SCHEDULER_FIX_ANALYSIS.md  main.cpp  main_both_fixed.cpp  main_combined.cpp  main_debug_encoder.cpp  main_encoder_abz_test.cpp  main_encoder_filtered.cpp  main_encoder_light.cpp  main_fixed_bldc.cpp  main_hall_rpm.cpp  main_hall_test.cpp  main_real_bldc.cpp  main_safety.cpp  main_stable.cpp  main_z_index_fixed.cpp  main_z_index_rpm.cpp  pico_sdk_import.cmake  test_basic.cpp
pico_firmware/src/: BLDCRPMSensor.cpp  BLDCRPMSensor.h  bldc_speed_pulse.cpp  bldc_speed_pulse.h  communication_handler.cpp  communication_handler.cpp.BACKUP  communication_handler.h  config.h  diagnostic_monitor.h  gcode_interface.cpp  gcode_interface.cpp.BACKUP  gcode_interface.h  gcode_parser_improved.h  move_queue.cpp  move_queue.h  move_queue_improved.h  pio_stepper.cpp  pio_stepper.h  pio_stepper.pio  pio_stepper_handoff.h  safety.cpp  safety_monitor.cpp  safety_monitor.h  scheduler.cpp  scheduler.h  scheduler_clean.cpp  scheduler_improved.h  spindle.cpp  spindle.h  stepcompress.cpp  stepcompress.h  stepcompress_improved.h  tmc2209.cpp  tmc2209.h  traverse_controller.cpp  traverse_controller.h  tusb_config.h  version.h  winding_controller.cpp  winding_controller.cpp.BACKUP  (+2 more)
(+31 files in other folders)
